swagger user ok
